--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "sass": "^1.56.2",
+    "styled-components": "^5.3.6",
     "validator": "^13.7.0",
     "watch": "^1.0.2"
   }
