--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "formik": "^2.2.9",
     "lodash.debounce": "^4.0.8",
     "next": "13.0.6",
     "qs": "^6.11.0",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^2.7.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "sass": "^1.56.2",
     "styled-components": "^5.3.6",
     "validator": "^13.7.0",
