--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "formik": "^2.2.9",
-    "lodash.debounce": "^4.0.8",
+    "lodash": "^4.17.21",
     "next": "13.0.6",
     "qs": "^6.11.0",
     "react": "18.2.0",
