--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.15.0",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.2",
