--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "socket.io": "^2.3.0",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.6",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
