--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-config-next": "13.0.6",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
-    "next": "13.0.6",
+    "next": "^13.2.4",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
